<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.JobsListFragment"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">


    <EditText
        android:id="@+id/date_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>
    <EditText
        android:id="@+id/address_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"/>
    <EditText
        android:id="@+id/note_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"/>


    <Button
        android:id="@+id/addnewJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/save_job"/>
    <Button
        android:id="@+id/viewJobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/view_jobs"/>

</LinearLayout>