<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_password_confirm"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="100dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>



</LinearLayout>